# hato

./: .gitignore  .gitmodules  job.sh  pyproject.toml  result.err
hato/eval/: gpt.py  judge.py  visualize.py
hato/infer/: qwen.py
hato/model/: answer.py  result.py
src/eval/: characteristics.py  gpt.py  judge.py  vis_jp.py  vis_v2.py  vis_v3.py  vis_v4.py  visualize.py
src/infer/: qwen.py
src/model/: answer.py  dataset.py  result.py
src/prompt/: template.py
src/training/: dataset_gen_jp.py  grpo_json.py  reward.py  test_gen.py  train.py
src/utils/: extraction.py
