[project]
name = "hato"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "ollama>=0.5.1",
    "openai>=1.84.0",
    "pydantic>=2.11.5",
    "pyfiglet>=1.0.3",
    "python-dotenv>=1.1.0",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "transformers==4.49.0",
    "unsloth==2025.4.1",
    "hato",
    "vlmgrpo",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.11.12",
    "ty>=0.0.1a7",
    "types-seaborn>=0.13.2.20250516",
]

[tool.uv.sources]
vlmgrpo = { path = "submodules/VLM_GRPO" }
